@@ -132,6 +132,7 @@ SIP_PYDICT                  {return TK_PYDICT;}
 SIP_PYCALLABLE              {return TK_PYCALLABLE;}
 SIP_PYSLICE                 {return TK_PYSLICE;}
 SIP_PYTYPE                  {return TK_PYTYPE;}
+SIP_PYBUFFER                {return TK_PYBUFFER;}
 SIP_SIGNAL                  {return TK_SIPSIGNAL;}
 SIP_SLOT                    {return TK_SIPSLOT;}
 SIP_ANYSLOT                 {return TK_SIPANYSLOT;}
