@@ -338,6 +338,7 @@ file.
             **bool** |
             **void** |
             **PyObject** |
+            :stype:`SIP_PYBUFFER` |
             :stype:`SIP_PYCALLABLE` |
             :stype:`SIP_PYDICT` |
             :stype:`SIP_PYLIST` |
@@ -388,6 +389,11 @@ This is both a ``const char *`` and a ``PyObject *`` that is used as the type
 of the member instead of ``const char *`` in functions that implement the
 connection or disconnection of an explicitly generated signal to a slot.
 Handwritten code must be provided to interpret the conversion correctly.
+
+
+.. sip-type:: SIP_PYBUFFER
+
+This is a ``PyObject *`` that implements the Python buffer protocol.
 
 
 .. sip-type:: SIP_PYCALLABLE
